[project]
name = "woh-tools"
version = "0.1.0"
description = "CLI tools for Wheel of Heaven library management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
deepl = ["deepl>=1.18.0"]
ollama = ["ollama>=0.4.0"]
all-llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "deepl>=1.18.0",
    "ollama>=0.4.0",
]

[project.scripts]
woh = "tools.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
